# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/comments/posts/{postID}": {
+        "/api/comments/posts/{postID}": {
             "get": {
                 "security": [
                     {
@@ -45,7 +45,7 @@
                 }
             }
         },
-        "/comments/{commentID}": {
+        "/api/comments/{commentID}": {
             "delete": {
                 "security": [
                     {
@@ -92,7 +92,7 @@
                 }
             }
         },
-        "/comments/{postID}": {
+        "/api/comments/{postID}": {
             "post": {
                 "security": [
                     {
@@ -147,7 +147,7 @@
                 }
             }
         },
-        "/follows/{followedUserID}": {
+        "/api/follows/{followedUserID}": {
             "post": {
                 "security": [
                     {
@@ -233,7 +233,7 @@
                 }
             }
         },
-        "/follows/{userID}": {
+        "/api/follows/{userID}": {
             "get": {
                 "security": [
                     {
@@ -277,7 +277,7 @@
                 }
             }
         },
-        "/follows/{userID}/followings": {
+        "/api/follows/{userID}/followings": {
             "get": {
                 "security": [
                     {
@@ -321,7 +321,7 @@
                 }
             }
         },
-        "/likes/{postID}": {
+        "/api/likes/{postID}": {
             "get": {
                 "description": "Retrieves the likes for the post with the specified postID",
                 "tags": [
@@ -440,7 +440,7 @@
                 }
             }
         },
-        "/messages": {
+        "/api/messages": {
             "get": {
                 "security": [
                     {
@@ -452,7 +452,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chats"
+                    "Messages"
                 ],
                 "summary": "Get chats by user ID",
                 "parameters": [
@@ -533,7 +533,7 @@
                 }
             }
         },
-        "/messages/{chatPartnerID}": {
+        "/api/messages/{chatPartnerID}": {
             "get": {
                 "security": [
                     {
@@ -586,7 +586,7 @@
                 }
             }
         },
-        "/posts": {
+        "/api/posts": {
             "get": {
                 "description": "Get all posts in the system",
                 "produces": [
@@ -647,13 +647,6 @@
                 "summary": "Create a post",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Post data",
                         "name": "postCreateRequestDTO",
                         "in": "body",
@@ -682,7 +675,7 @@
                 }
             }
         },
-        "/posts/feed": {
+        "/api/posts/feed": {
             "get": {
                 "description": "Get all posts of the users the logged in user follows (feed)",
                 "consumes": [
@@ -735,7 +728,7 @@
                 }
             }
         },
-        "/posts/user/{userID}": {
+        "/api/posts/user/{userID}": {
             "get": {
                 "description": "Retrieves all posts of a specific user",
                 "produces": [
@@ -787,7 +780,7 @@
                 }
             }
         },
-        "/posts/{postID}": {
+        "/api/posts/{postID}": {
             "get": {
                 "security": [
                     {
@@ -879,7 +872,7 @@
                 }
             }
         },
-        "/users": {
+        "/api/users": {
             "get": {
                 "description": "Get a list of users based on query parameters",
                 "consumes": [
@@ -978,7 +971,7 @@
                 }
             }
         },
-        "/users/confirm/{token}": {
+        "/api/users/confirm/{token}": {
             "patch": {
                 "security": [
                     {
@@ -993,7 +986,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "Confirm Email",
                 "parameters": [
@@ -1018,7 +1011,7 @@
                 }
             }
         },
-        "/users/forgotPassword": {
+        "/api/users/forgotPassword": {
             "patch": {
                 "description": "Reset the forgotten password",
                 "consumes": [
@@ -1055,14 +1048,14 @@
                 }
             }
         },
-        "/users/login": {
+        "/api/users/login": {
             "post": {
                 "description": "Authenticate and login a user",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "User Login",
                 "parameters": [
@@ -1092,7 +1085,7 @@
                 }
             }
         },
-        "/users/signup": {
+        "/api/users/signup": {
             "post": {
                 "description": "Create a new user account",
                 "consumes": [
@@ -1102,7 +1095,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "User Signup",
                 "parameters": [
@@ -1132,7 +1125,7 @@
                 }
             }
         },
-        "/users/updatePassword": {
+        "/api/users/updatePassword": {
             "patch": {
                 "security": [
                     {
@@ -1144,7 +1137,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Users"
                 ],
                 "summary": "Update Password",
                 "parameters": [
@@ -1177,7 +1170,29 @@
                 }
             }
         },
-        "/users/{userID}": {
+        "/api/users/validate": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Validate the user token and check if the user is authorized",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Validate User Token",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/users/{userID}": {
             "get": {
                 "description": "Get a user by their ID",
                 "produces": [
@@ -1211,28 +1226,6 @@
                     },
                     "404": {
                         "description": "Not Found"
-                    }
-                }
-            }
-        },
-        "/validate": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Validate the user token and check if the user is authorized",
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Validate User Token",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
                     }
                 }
             }
